--- a/interactions/-bars-start/styles.css
+++ b/interactions/-bars-start/styles.css
@@ -9,6 +9,10 @@ body {
     font-family: sans-serif;
 }
 
+.wrapper {
+    position: relative;
+}
+
 .title {
     font-size: 1.4em;
     font-weight: 800;
@@ -17,9 +21,13 @@ body {
     margin-bottom: 1em;
 }
 
-.bin rect {
+.bin {
     fill: #686de0;
     transition: all 0.2s ease-out;
+}
+
+.bin:hover {
+    fill: #22a6b3;
 }
 
 .bin text {
@@ -66,6 +74,81 @@ body {
     text-anchor: end;
 }
 
+.tooltip {
+    position: absolute;
+    opacity: 0;
+    top: -12px;
+    left: 0;
+    padding: 0.6em 1em;
+    background: #fff;
+    /* text-align: center; */
+    /* border: 1px solid #ddd; */
+    box-shadow: 0 6px 8px rgba(52, 73, 94, .2), 0 1px 1px rgba(52, 73, 94, 0.1);
+    z-index: 10;
+    transition: all 0.2s ease-out;
+    pointer-events: none;
+}
+
+.tooltip:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 12px;
+    height: 12px;
+    background: white;
+    border: 1px solid #ddd;
+    border-top-color: transparent;
+    border-left-color: transparent;
+    transform: translate(-50%, 50%) rotate(45deg);
+    transform-origin: center center;
+    z-index: 10;
+}
+
+.tooltip-range {
+    margin-bottom: 0.2em;
+    font-weight: 600;
+}
+
+.tooltip-examples {
+    margin-top: 0.6em;
+    margin-bottom: 0.2em;
+    max-width: 25em;
+    font-size: 0.7em;
+    line-height: 1.3;
+    font-weight: 300;
+    opacity: 0.6;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.tooltip-value {
+    margin-bottom: 0.2em;
+    font-size: 0.7em;
+    line-height: 1.3;
+    font-weight: 550;
+}
+
+.tooltip-bar-value {
+    font-size: 0.7em;
+    margin-top: 1em;
+    margin-bottom: 0.3em;
+}
+
+.tooltip-bar {
+    margin-bottom: 0.5em;
+    position: relative;
+    width: 100%;
+    height: 0.6em;
+    background: #eaeaea;
+}
+
+.tooltip-bar-fill {
+    background: #30336b;
+    height: 100%;
+}
+
 .note {
     color: #95afc0;
     margin-top: 3em;
@@ -75,4 +158,12 @@ body {
 
 .note a {
     color: inherit;
+}
+
+.listeners {
+    fill: transparent;
+}
+
+.hovered {
+    fill: #22a6b3;
 }
